manifests/infra/gateway.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: external-http
  namespace: infra
  annotations:
    configsync.gke.io/cluster-name-selector: "gke-cls-app-euwe-1"
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: public-store-route
  namespace: online-boutique
  labels:
    gateway: external-http
  annotations:
    configsync.gke.io/cluster-name-selector: "gke-cls-app-euwe-1"
spec:
  hostnames:
    - "store.example.com"
  parentRefs:
    - name: external-http
  rules:
    - backendRefs:
        - group: net.gke.io
          kind: ServiceImport
          name: frontend
          port: 80
